subindo site pronto

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --branco: #fff;
     --cor-site:#030304;
     --preto:#0000;
-    --cor-final:#171717;
+    --cor-final:#666666;
 }
 
 body {
@@ -26,8 +26,6 @@ body {
 
 header {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     padding: 30px 70px;
     display: flex;
@@ -41,9 +39,11 @@ header {
 }
 
 #menu {
+
     display: flex;
     gap: 40px;
 }
+
 
 #menu a {
     text-decoration: none;
@@ -80,25 +80,25 @@ header {
 }
 
 .explorar h2 {
-    font-size: 22px;
+    font-size: 30px;
     letter-spacing: 4px;
-    font-weight: 400;
-    margin-bottom: 30px;
+    margin-bottom: 56px;
     position: relative;
 }
 
 .explorar h2::after {
     content: "";
-    width: 60px;
+    width: 100px;
     height: 2px;
     background: var(--azul-claro);
     display: block;
-    margin: 10px auto 0;
+    margin: 5px auto 0;
+    margin-top: -50px;
 }
 
 .explorar p {
-    font-size: 14px;
-    max-width: 700px;
+    font-size: 19px;
+    max-width: 2000px;
     opacity: 0.8;
     margin: 0 auto 40px;
 
@@ -123,49 +123,68 @@ header {
 
 .destaques {
     text-align: left;
-    padding: 40px 500px;
+    padding: 40px 170px;
     margin-top: 100px;
 }
 
 .destaques h2 {
-    font-size: 18px;
-    margin-bottom: 40px;
+    font-size: 25px;
+    margin-bottom: 100px;
+}
+
+.destaques h2::after {
+    content: "";
+    width: 150px;
+    height: 2px;
+    background: var(--azul-claro);
+    display: flex;
+    margin: 5px auto 0;
 }
 
 .faixa {
     display: flex;
-    justify-content: center;
-    gap: 40px;
+    justify-content: end;
+    gap: 100px;
 }
 
 .destaque-item img {
-    width: 140px;
-    height: 140px;
+    width: 210px;
+    height: 300px;
     object-fit: cover;
-    border-radius: 16px;
+    border-radius: 20px;
 }
 
 .categorias {
     text-align: center;
-    margin-top: 160px;
+    margin-top: 300px;
+    
 }
 
 .categorias h2 {
-    font-size: 18px;
+    font-size: 25px;
     letter-spacing: 4px;
     margin-bottom: 50px;
+ }  
+
+.categorias h2::after {
+    content: "";
+    width: 200px;
+    height: 2px;
+    background: var(--azul-claro);
+    display: flex;
+    margin: 5px auto;
 }
+
 
 .categoria-item {
     display: inline-flex;
-    align-items: center;
     flex-direction: column;
     margin: 0 35px;
 }
 
 .circulo {
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     background: #0d0d0d;
     display: flex;
@@ -194,26 +213,37 @@ header {
 }
 
 .informado h2 {
-    font-size: 18px;
+    font-size: 30px;
     letter-spacing: 4px;
-    margin-bottom: 20px;
+    margin-bottom: 70px;
+}
+
+.informado h2::after {
+    content: "";
+    width: 400px;
+    height: 2px;
+    background: var(--azul-claro);
+    display: block;
+    margin: 5px auto 0;
+    margin-top: -50px;
 }
 
 .informado p {
-    font-size: 13px;
+    font-size: 20px;
     opacity: 0.8;
-    max-width: 700px;
+    max-width: 1000px;
     margin: 0 auto 40px;
 }
 
 
 .compras {
+    letter-spacing: 60px;
     text-align: center;
     margin-bottom: 120px;
 }
 
 .compras h2 {
-    font-size: 18px;
+    font-size: 20px;
     letter-spacing: 4px;
     margin-bottom: 40px;
 }
@@ -228,9 +258,257 @@ header {
 .quadrado img {
     width: 55px;
     margin-bottom: 15px;
+    
 }
 
 .quadrado p {
     font-size: 12px;
     letter-spacing: 2px;
+}
+
+.como-funciona {
+    width: 100%;
+    padding: 60px 0;
+    display: flex;
+    justify-content: center;
+    gap:200px ;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.card-info {
+    width: 360px; 
+    background:var(--cor-site);
+    border: 1px solid rgba(255,255,255,0.1);
+    border-radius: 20px;
+    padding: 30px 25px;
+    text-align: center;
+}
+
+.card-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.card-img img {
+    width: 250px;
+    height: auto;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.card-desc {
+    font-size: 0.95rem;
+    line-height: 1.4;
+    color: var(--branco);
+}
+
+
+
+.footer-info {
+    margin-top: 40px;
+    text-align: center;
+    width: 100%;
+    color:var(--branco);
+    font-size: 12px;
+    padding-top: 20px;
+    border-top: 1px var(--branco);
+}
+.footer {
+    background:var(--cor-final);
+    padding: 80px 60px 40px;
+    font-family: "Cinzel"
+}
+
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    letter-spacing: 2px;
+}
+
+.footer-links a {
+    color:var(--branco);
+    font-size: 17px;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+.footer-links a:hover {
+    color:var(--branco);
+}
+
+.footer-fim {
+    text-align: center;
+}
+
+.footer-fim p {
+    color: var(--branco);
+    letter-spacing: 3px;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-left: -60px;
+}
+
+.footer-flor {
+    margin-top: -150px;
+    margin-left: -60px;
+    width: 60px;
+    opacity: 0.7;
+}
+
+.footer-flor:hover{
+     opacity: 0.5;
+}
+
+
+.footer-social img {
+    width: 22px;
+    margin-top: -90px;
+    margin-left: 10px;
+    margin-right: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.footer-social img:hover {
+    opacity: 0.5;
+}
+
+.footer-divider {
+    height: 40px !important;
+    background:var(--cor-final) !important;
+    border: 5px solid var(--preto)!important;
+}
+
+
+
+
+
+
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-texto {
+    margin-top: 50px;
+    font-size: 8px;
+    line-height: 10px;
+    color: var(--branco);
+    gap: 10px;
+}
+
+.footer-pagamentos img {
+    height: 30px; 
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 50px;
+     cursor: pointer;
+    transition: 0.3s;
+}
+
+.footer-pagamentos img:hover{
+    opacity: 0.5;
+}
+
+/* Alinha tudo à direita */
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+}
+
+/* Bloco "Baixe nosso app" */
+.footer-app {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 8px;
+     cursor: pointer;
+    transition: 0.3s;
+}
+
+.footer-app img:hover{
+opacity: 0.5;
+}
+
+.footer-app p {
+    font-size: 15px;
+    color: #e7e7e7;
+    margin-right: 30px;
+    letter-spacing: 5px;
+}
+
+/* Tamanho da imagem dos apps */
+.footer-app img {
+    height: 40px;  /* ajuste se quiser maior/menor */
+    width: auto;
+    border-radius: 20px;
+}
+
+
+.footer-pagamentos img {
+    height: 24px;     /* ajuste conforme seu modelo */
+    margin-left: 10px;
+    margin-right: 40px;
+    opacity: 0.85;
+    border-radius: 5px;
+}
+
+
+/* -------------------- Responsividade --------------- */
+
+@media screen and (max-width: 768px) {
+#sombra {
+        background-color: #9D562390;
+        backdrop-filter: blur(10px);
+        z-index: 1;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        right: -101vw;
+        transition: .5s;
+    }
+
+    #menu_botao {
+        display: block;
+        z-index: 1;
+    }
+
+nav.menu {
+        /* height: 100vh; */
+        width: 200px;
+        padding: 0px 30px;
+
+        flex-direction: column;
+        justify-content: space-around;
+        gap: 15px;
+
+        position: fixed;
+        top: 165px;
+        right: -210px;
+        z-index: 1;
+        transition: .5s;
+    }
 }
